# aIphawatch

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  alphawatch-github-staging-iam.json  docker-compose.yml  et -euo pipefail  iam get-role-policy \  jest.config.js  jest.config.ts  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build-artifacts.yml  ci.yml  deploy-staging.yml  release-prod.yml  run-staging-migration-drill.yml
alphawatch/: config.py  database.py  redis.py
alphawatch/agents/: state.py
alphawatch/api/: auth.py  dependencies.py  main.py  middleware.py
alphawatch/migrations/: env.py
alphawatch/models/: __init__.py  brief.py  chat.py  company.py  document.py  financial.py  risk.py  tenant.py  user.py  watchlist.py
alphawatch/repositories/: __init__.py  briefs.py  chat.py  chunks.py  companies.py  dashboard.py  (+4 more)
buildspecs/: migration-safety-drill.yml
docs/: AIphaWatch-TechnicalSpec.md  PRD-AIphaWatch-2026-03-25.md  api-bedrock-pgvector-redis-ecs.mmd  phase2-operations-runbook-news-sources.md  phase2-step1-hardening.md  phase2-step1-migration-journal-template.md  phase2-step2-runtime-foundations-spec.md  phase2-step3-news-ingestion-spec.md  project-status.md  step14-acceptance-checklist.md  step7-summary.md
tests/: conftest.py  test_api.py  test_auth.py  test_brief.py  test_briefs_api.py  test_chat.py  test_companies.py  test_config.py  test_dashboard.py  test_dependencies.py  test_financial.py  test_ingestion.py  test_models.py  test_peers.py  test_sentiment.py  test_watchlist.py
(+93 files in other folders)
