[project]
name = "aiphawatch"
version = "0.1.0"
description = "AI-powered equity intelligence for buy-side analysts"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
]
